[package]
name = "p3-fri"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = []
parallel = ["p3-maybe-rayon/parallel"]


[dependencies]
p3-challenger = { path = "../challenger" }
p3-commit = { path = "../commit" }
p3-field = { path = "../field" }
p3-ldt = { path = "../ldt" }
p3-matrix = { path = "../matrix" }
p3-maybe-rayon = { path = "../maybe-rayon", default-features = false }
p3-util = { path = "../util" }
itertools = { version = "0.12.0", default-features = false, features = ["use_alloc"] }
tracing = { version = "0.1.37", default-features = false, features = ["attributes"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }

[dev-dependencies]
p3-baby-bear = { path = "../baby-bear" }
p3-dft = { path = "../dft" }
p3-goldilocks = { path = "../goldilocks" }
p3-mersenne-31 = { path = "../mersenne-31" }
p3-mds = { path = "../mds" }
p3-merkle-tree = { path = "../merkle-tree" }
p3-poseidon2 = { path = "../poseidon2" }
p3-symmetric = { path = "../symmetric" }
criterion = "0.5.1"
rand = "0.8.5"
rand_chacha = "0.3.1"

[[bench]]
name = "fold_even_odd"
harness = false
