[package]
name = "p3-mersenne-31"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = []
parallel = ["p3-maybe-rayon/parallel"]

[dependencies]
itertools = { version = "0.12.0", default-features = false, features = ["use_alloc"] }
p3-dft = { path = "../dft" }
p3-field = { path = "../field" }
p3-matrix = { path = "../matrix" }
p3-maybe-rayon = { path = "../maybe-rayon", default-features = false }
p3-util = { path = "../util" }
rand = { version = "0.8.5", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }

[[bench]]
name = "bench_field"
harness = false

[[bench]]
name = "extension"
harness = false

[dev-dependencies]
p3-field-testing = { path = "../field-testing" }
criterion = "0.5"
